# era-heavy-ops-service

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: ci.yaml
api/: Cargo.toml
api-testing/: Cargo.toml
api-testing/src/: lib.rs  non_trivial_circuit.rs
api-testing/src/circuit/: lookup_table.rs  main_gate.rs  mod.rs
api/src/: gpu.rs  legacy.rs  lib.rs
gpu-ffi/: Cargo.toml  build.rs
gpu-ffi/src/: arithmetic.rs  bindings.rs  bindings_extra.rs  error.rs  lib.rs  msm.rs  ntt.rs  other.rs  utils.rs  wrapper.rs
gpu-prover/: Cargo.toml
gpu-prover/src/: lib.rs  proof.rs  setup_precomputations.rs  utils.rs
gpu-prover/src/cuda_bindings/: async_vec.rs  context.rs  cuda_allocator.rs  device_arithmetic.rs  device_buf.rs  device_heavy_ops.rs  error.rs  event.rs  mod.rs  stream.rs  tests.rs
gpu-prover/src/cuda_memory/: cuda_allocator.rs  device_buf.rs  mod.rs
gpu-prover/src/memory_manager/: copying_operations.rs  mod.rs  polynomial_identifiers.rs  tests.rs
gpu-prover/src/memory_manager/polynomial_operations/: arithmetic.rs  heavy_operations.rs  mod.rs  other.rs
gpu-prover/src/memory_manager/proving_operations/: columns_sorting.rs  compute_assigments_and_permutations.rs  compute_permutations.rs  compute_state_values.rs  create_selectors.rs  mod.rs
gpu-prover/src/rounds/: mod.rs  round1.rs  round15.rs  round2.rs  round3.rs  round4.rs  round5.rs  tests.rs  utils.rs
prover-service/: Cargo.toml
prover-service/src/: lib.rs  remote_synth.rs  run_prover.rs  setup.rs  tests.rs  utils.rs
prover-service/src/simple/: mod.rs  simple_artifact_manager.rs  simple_job_manager.rs
testing/: Cargo.toml
testing/src/: lib.rs  non_trivial_circuit.rs
wrapper-prover/: Cargo.toml
wrapper-prover/src/: error.rs  lib.rs  prover_storage.rs  tests.rs
wrapper-prover/test_proofs/aux_layer/: wrapper_proof_1.proof
