[package]
name = "api-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api", optional = true, default_features = false}
rand = "0.4"
serde_json = "1.0"
zkevm_test_harness = {git = "ssh://git@github.com/matter-labs/era-zkevm_test_harness", branch = "v1.3.2"}
# zkevm_test_harness = {path = "../../zkevm_test_harness"}
bincode = "1.3.2"

[features]
default = ["gpu"]
legacy = ["api/legacy"]
gpu = ["api/gpu"]
gpu_no_alloc = ["api/gpu_no_alloc"]
