[package]
name = "gpu-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
futures-locks = "0.7"
derivative = "*"
num_cpus = "1"
crossbeam = "*"

[build-dependencies]
bindgen = "0.59.1"

[dev-dependencies]
rand = "0.4"

[lib]
doctest = false

