[package]
name = "gpu-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpu-ffi = {path = "../gpu-ffi"}
crossbeam = "*"
rand = "0.4"
num_cpus = "1"
franklin-crypto = {package = "franklin-crypto", features = ["plonk"], git = "ssh://git@github.com/matter-labs/franklin-crypto", branch = "dev", optional = true}
# franklin-crypto = {path = "../../franklin-crypto", features = ["plonk"], optional = true}
itertools = "*"
cfg-if = "1"
bit-vec = "0.6"
serde = {version = "1", features = ["derive", "rc"]}

[features]
default = ["allocator"]
no_allocator = ["franklin-crypto"]
allocator = ["franklin-crypto/allocator"]