[package]
name = "prover-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkevm_test_harness = {git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.3.2"}
# zkevm_test_harness = {path = "../../zkevm_test_harness"}
prover = {path =  "../api", package = "api", default_features = false, optional = true}
bincode = "1.3.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
crossbeam-utils = "0.8"
num_cpus = "*"
log = "0.4"
rand = "0.4"

[features]
default = ["gpu"]
legacy = ["prover/legacy"]
gpu = ["prover/gpu"]
gpu_no_alloc = ["prover/gpu_no_alloc"]