[package]
name = "wrapper-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpu-prover = {path = "../gpu-prover"}
zkevm_test_harness = {path = "../../era-zkevm_test_harness"}
circuit_definitions = {path = "../../era-zkevm_test_harness/circuit_definitions"}